# tagged-binary-format

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md
docs/: FORMAT.md
include/tbf/: DataTag.hpp  DataType.hpp  Endianness.hpp  Reader.hpp  Writer.hpp
src/: Reader.cpp  Writer.cpp
tests/: CMakeLists.txt  test_arrays.cpp  test_basic_types.cpp  test_objects.cpp  test_vectors.cpp
